# soroban-decoder

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/soroban-decompiler/: Cargo.toml  README.md
crates/soroban-decompiler-bench/: Cargo.toml  README.md
crates/soroban-decompiler-bench/src/: compare.rs  extract.rs  lib.rs  main.rs  report.rs  score.rs
crates/soroban-decompiler-cli/: Cargo.toml  README.md
crates/soroban-decompiler-cli/src/: main.rs
crates/soroban-decompiler-wasm/: Cargo.toml  README.md  test.html
crates/soroban-decompiler-wasm/src/: lib.rs
crates/soroban-decompiler/src/: codegen.rs  host_functions.rs  ir.rs  lib.rs  spec_extract.rs  wasm_imports.rs
crates/soroban-decompiler/src/codegen/: emit.rs  helper_extractor.rs  imports.rs  mod.rs  types.rs
crates/soroban-decompiler/src/pattern_recognizer/: error_branches.rs  event_recognition.rs  guard_analysis.rs  host_calls.rs  loop_patterns.rs  mod.rs  optimization.rs  param_subst.rs  storage_keys.rs  token_fix.rs  val_decoding.rs
crates/soroban-decompiler/src/pattern_recognizer/host_calls/: auth.rs  collections.rs  context.rs  crypto.rs  mod.rs  storage.rs  types.rs
crates/soroban-decompiler/src/pattern_recognizer/optimization/: cse.rs  dce.rs  guards.rs  hoisting.rs  i128.rs  identity.rs  increment.rs  mod.rs  struct_mutation.rs
crates/soroban-decompiler/src/wasm_analysis/: analysis.rs  helpers.rs  mod.rs  simulation.rs
crates/soroban-decompiler/tests/: end_to_end.rs
examples/contracts/: privacy_pools.wasm  soroban_account_contract.wasm  soroban_alloc_contract.wasm  soroban_ark_bn254_contract.wasm  soroban_atomic_multiswap_contract.wasm  soroban_atomic_swap_contract.wasm  soroban_auth_contract.wasm  soroban_bls_signature.wasm  soroban_cross_contract_a_contract.wasm  soroban_cross_contract_b_contract.wasm  soroban_custom_types_contract.wasm  soroban_deployer_contract.wasm  soroban_errors_contract.wasm  soroban_eth_abi.wasm  soroban_events_contract.wasm  soroban_fuzzing_contract.wasm  soroban_groth16_verifier_contract.wasm  soroban_increment_contract.wasm  soroban_liquidity_pool_contract.wasm
