[workspace]
resolver = "2"
members = [
    "crates/soroban-decompiler",
    "crates/soroban-decompiler-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Gmin2/soroban-decoder"
homepage = "https://github.com/Gmin2/soroban-decoder"
authors = ["Mintu Gogoi <mintugogoi567@gmail.com>"]

[workspace.dependencies]
# Internal workspace crate (so CLI can use the library)
soroban-decompiler = { path = "crates/soroban-decompiler", version = "0.2.0" }

# Soroban ecosystem (published versions from crates.io)
soroban-spec = "25.1.0"
soroban-spec-rust = "25.1.0"
stellar-xdr = { version = "=25.0.0", default-features = false, features = ["curr", "std"] }

# WASM parsing
walrus = "0.24.5"
wasmparser = "0.116.1"

# Rust code generation
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.2.4"

# CLI and infrastructure
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
