[package]
name = "soroban-decompiler-bench"
description = "AST-based accuracy benchmark for Soroban WASM decompiler output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["soroban", "stellar", "benchmark", "ast", "decompiler"]
categories = ["development-tools"]

[[bin]]
name = "soroban-bench"
path = "src/main.rs"

[lib]
name = "soroban_decompiler_bench"
path = "src/lib.rs"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
