[package]
name = "soroban-decompiler-cli"
description = "CLI for decompiling Soroban WASM smart contracts back to Rust source"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["soroban", "stellar", "wasm", "decompiler", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "soroban-decompile"
path = "src/main.rs"

[dependencies]
soroban-decompiler = { workspace = true }
stellar-xdr = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
