[package]
name = "soroban-decompiler-wasm"
description = "Browser WASM build of the Soroban decompiler — runs entirely client-side"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-decompiler = { workspace = true }
soroban-decompiler-bench = { path = "../soroban-decompiler-bench" }
wasm-bindgen = "0.2"
serde_json = { workspace = true }
