[package]
name = "soroban-decompiler"
description = "Soroban WASM smart contract decompiler - reconstructs Rust source from compiled contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["soroban", "stellar", "wasm", "decompiler", "smart-contracts"]
categories = ["development-tools", "wasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
soroban-spec = { workspace = true }
soroban-spec-rust = { workspace = true }
stellar-xdr = { workspace = true }
walrus = { workspace = true }
wasmparser = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }  # used internally to parse env.json
anyhow = { workspace = true }
thiserror = { workspace = true }
